CHANGES.txt - 04/27/2003
------------------------

CHANGES IN CUPS V1.1.19rc3

	- The scheduler would write 0-length job control files
	  (STR #46)
	- Updated the French man pages (translation provided by
	  Gilles QUERRET)
	- The scheduler would delete all printers from
	  printers.conf if a job was active when a HUP signal
	  was handled (STR #47)
	- The cups-polld program would leak memory if it was
	  unable to send browse packets to the loopback
	  interface (STR #40)
	- The scheduler did not put the
	  job-originating-host-name attribute in the job
	  attributes group.
	- The text filter did not default to wrapping text as
	  defined by the IPP implementation document.
	- Scan backends first, PPDs second (STR #37)
	- Updated the Netatalk documentation in the SAM (STR #38
	  and #39)
	- The test suite sent text files to a non-PS print queue,
	  which requires ESP Ghostscript (provided separately).
	  Now send the JPEG test file (STR #33)
	- The test suite did not show the estimated disk space
	  requirements (STR #33)
	- The test suite did not set the MaxLogSize directive to
	  0 to prevent log file rotation (STR #33)
	- The test suite still setup the old CUPS Ghostscript
	  symlinks (STR #33)
	- The pstops filter did not report the correct number of
	  copies for the page_log file when printing collated
	  copies to a printer that doesn't support them in
	  hardware (STR #32)
	- cupsLangGet() needs to set the CTYPE locale to "C"
	  (POSIX) to avoid erroneous tolower/toupper values (fix
	  suggested by Bjoern Jacke)
	- Fixed a typo in the cups.list.in file.
	- Updated all of the Western European locales to default
	  to ISO-8859-15 (for Euro support, suggested by Bjoern
	  Jacke)
	- Updated the German message catalog (update provided by
	  Bjoern Jacke)


CHANGES IN CUPS V1.1.19rc2

	- cupsLangGet() now sets the encoding field based on the
	  trailing charset in the locale name, and doesn't look
	  for a message catalog in a specific locale.charset